@@ -1,5 +1,7 @@
 Version 8.5.3
 * [DXFC-279] Fixed a bug when a snapshot created by the `CreateSnapshotSubscription` method with the specified event type and time is not closed by `Dispose`
+* [DXFC-137] Fixed a bug where it was not possible to create a snapshot due to a collision of snapshot keys
+* Removed the wrong parameter `date` from the dxf_simple_order_book_sample 
 
 Version 8.5.2
 * [DXFC-277] Fixed a bug when the subscription with the Time parameter could not close when calling Dispose
